# opoca

./: .env.template  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run_pylint.py
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
docs/: DE_ready_definition.md
docs/source/: conf.py  index.rst
docs/source/content/: introduction.rst  quickstart.rst
opoca/: quilt_one_time_setup.py
opoca/data/: README.md  adversarial_validation.py  dataset.py  handler.py  missing_data_handler.py  preprocessing.py  split.py  splitter.py  targets.py
opoca/data/integrations/: __init__.py  salesforce.py
opoca/evaluation/: plotter.py  scorer.py  utils.py
opoca/features/: pipelines.py  transformers.py
opoca/hyperparam_search/: README.MD  examples.py  objective.py  pocstudy.py  utils.py
opoca/models/: __init__.py  xgboost_one_vs_rest.py
opoca/trainers/: sklearn.py
tests/: conftest.py
tests/data/: test_adversarial_split.py  test_adversarial_validation.py  test_loading.py  test_saving.py  test_splitting.py  test_targets.py  test_time_split.py
tests/evaluation/: test_scorer.py
tests/features/: test_transformers.py
tests/fixtures/: data.py  pipelines.py  playground_data_loader.py  utils.py
tests/hyperparam_search/: test_objective.py
tests/sample_data/: __init__.py
tests/trainers/: test_sklearn.py
